--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,3 +27,14 @@ jobs:
       uses: actions/setup-python@v5.1.0
       with:
         python-version: 3.11
+    
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Browser Init
+      run: rfbrowser init
+
+    - name: Run E2E Tests
+      run: robot -d tests/results tests/
