--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,3 +38,10 @@ jobs:
 
     - name: Run E2E Tests
       run: robot -d tests/results tests/
+
+    - name: Robot Reporter
+      uses: joonvena/robotframework-reporter-action@v2.4
+      with:
+        # Token to access the API
+        gh_access_token: ${{ secrets.GITHUB_TOKEN }}
+        report_path: tests/results
