--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,3 +45,9 @@ jobs:
         # Token to access the API
         gh_access_token: ${{ secrets.GITHUB_TOKEN }}
         report_path: tests/results
+    
+    - name: Upload Report
+      uses: actions/upload-artifact@v4.3.3
+      with:
+        name: Teste E2E Report
+        path: tests/results
