--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: Robot Reporter
       uses: joonvena/robotframework-reporter-action@v2.4
+      if: always()
       with:
         # Token to access the API
         gh_access_token: ${{ secrets.GITHUB_TOKEN }}
@@ -48,6 +49,7 @@ jobs:
     
     - name: Upload Report
       uses: actions/upload-artifact@v4.3.3
+      if: always()
       with:
         name: Teste E2E Report
         path: tests/results
