--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,5 +51,5 @@ jobs:
       uses: actions/upload-artifact@v4.3.3
       if: always()
       with:
-        name: Teste E2E Report
+        name: Test E2E Report
         path: tests/results
